--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "redux-logger": "^2.6.1",
     "redux-thunk": "^2.1.0",
     "riot": "^2.5.0",
+    "riotjs-loader": "^3.0.0",
     "webpack": "^1.13.1"
   },
   "devDependencies": {
